update test coverage